--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:813360799471:ios:85785d7bcfad106428c51a",
-  "FIREBASE_PROJECT_ID": "apple-store-b4336",
-  "GCM_SENDER_ID": "813360799471"
+  "GOOGLE_APP_ID": "1:274865701650:ios:9577804e65fb7262b7a9cb",
+  "FIREBASE_PROJECT_ID": "apple-79ed7",
+  "GCM_SENDER_ID": "274865701650"
 }
